--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <section class="first">
+       <div><img src="donation6.jpg" alt=""></div>
+       <div>
+            Let's Help Those Who Are More In Need
+            <h3>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                deterruisset. No duo populo animal noluisse, enim</h3>
+            <a href="link-button">Donate Now</a>
+        </div>
+    </section>
+    <section>
+        <div class="donation" >
+            <h1>Donate Today</h1>
+            <h6>In Bangladesh children in Need exists to make a positive difference to the lives of disadvantaged <br> children and young people across the subcontinent.</h6></div>
+    </section>
+    <section class="amount">
+            <div class="amount-1"><h1>100tk</h1></div>
+            <div class="amount-2"><h1>200tk</h1></div>
+            <div class="amount-3"><h1>500tk</h1></div>
+            <div class="amount-4"><h1>1000tk</h1></div>
+            <div class="amount-5"><h1>5000tk</h1></div>
+    </section>
+    <section class="other-amount">
+        <div><h5>Other Amount (Taka)</h5>
+            <hr>
+            <a href="">Donate Now</a>
+        </div>
+    </section>
     
 </body>
 </html>
