--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 </head>
 <body>
     <section class="first">
-       <div><img src="donation6.jpg" alt=""></div>
-       <div>
-            Let's Help Those Who Are More In Need
-            <h3>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                deterruisset. No duo populo animal noluisse, enim</h3>
-            <a href="link-button">Donate Now</a>
-        </div>
+        <h1>Let's Help Those Who Are More In Need</h1>
+            <h3>Fundraising for nonprofits and fundraising for Rescue Missions, means we’re there for the small things. <br> The deep-dive challenges. The aim-high possibilities.</h3>
+            <a href="">Donate Now</a>
     </section>
     <section>
         <div class="donation" >
@@ -39,6 +35,59 @@
             <a href="">Donate Now</a>
         </div>
     </section>
+<section class="our-donation-plan">
+    <div class="donation-1">
+        <h1>Our Donate Plan</h1>
+        <h5>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+            deterruisset. No duo populo animal noluisse, enim 
+        </h5></div>
+</section>
+        <section class="family">
+            <div class="family-1">
+                <h1>Food For Family</h1>
+                <p>The recent flood has caused devastation to many families in Sylhet. <br>  Despite the heartache it’s been heart-warming to see people come <br> together in order to support flood victims. Many of us are donating food <br> to help families in need.</p> 
+            </div>
+            <div class="family-2">
+                <h1>Shelter For Family</h1>
+                <p>This flood shelter is located in the village Ghanoshampur under Zatrapur <br> Union of Kurigram Upazilla beside the Kurigram-Zatrapur Road.The district <br> police station is 8 km to the east and Zatrapur market is half a kilometer to <br> the south of it. It is 700 m away from the Brahmaputra/Dharla river. </p>
+                <i class></i>
+            </div>
+            <div class="family-3">
+                <h1>Education For A Child</h1>
+                <p>A child’s right to education entails the right to learn. Yet, for too many <br> children across the globe, schooling does not lead to learning.Over 600 <br> million children and adolescents worldwide are unable to attain minimum <br> proficiency levels in reading and mathematics, even though two thirds of <br> them are in school.</p>
+            </div>
+        </section>
+        <section class="dependency">
+            <div><h1>Their live depend on your donation</h1>
+                <p>All of your donations will go directly to the flood affected families, <br> we are not taking any money for administration and <br> everyone delivering the food is doing it on a voluntary basis. <br> As well as distributing food packs to poor families in my mother's <br> home village of Elimpur, Bishwanath, we have a separate fund to <br> help some people rebuild mud and tin houses that have been totally destroyed by the floods.</p>
+            </div>
+                <div><img src="donation6.jpg" alt=""></div> 
+                
+        </section>
+        <section>
+            <div class="get-update">
+                <h1>Get My Updates</h1>
+                <h5>To get all the updates of our activies, please follow our social
+                    media sites such as <br> facebook, twitter,intagram and also our charity
+                    site "Better World".
+                </h5>
+            </div>
+        </section>
+        <section class="final">
+            <div>
+                <h5 class="update">Email</h5>
+            </div>
+            <div class="last-update">
+                <a href="">Search</a> 
+            </div>
+        </section>
+        <section class="foot">
+            <div>
+                <footer> <h6>Be Humble</h6>
+                <p>I'm gonna do it</p>
+                </footer>
+            </div>
+        </section>
     
 </body>
 </html>
